# ParseroLogan

./: .gitignore  README.md  pixi.toml  pyproject.toml
parserologan/: annotation.py  download.py  fasta.py  hmm_search.py  main.py  models.py  output.py  process_sample.py  run_log_file.py  run_textual.py  utils.py
